# algoritmo-genetico

./: Aleatorio.cpp  Aleatorio.h  AlgoritmoGenetico.cpp  AlgoritmoGenetico.h  CMakeLists.txt  README.md  main.cpp
Cruzamento/: ICruzamento.h  Uniforme.cpp  Uniforme.h
Gene/: GeneMochila.cpp  GeneMochila.h  IGene.h
Individuo/: ITipoIndividuo.h  Individuo.cpp  Individuo.h  Item.cpp  Item.h  TipoMochila.cpp  TipoMochila.h  itens.csv
MetodoPopulacional/: IMetodoPopulacional.h  PhiLambda.cpp  PhiLambda.h
Populacao/: Populacao.cpp
Selecao/: ISelecao.h  Torneio.cpp  Torneio.h
